--- a/src/app.css
+++ b/src/app.css
@@ -76,6 +76,11 @@ main{
   transition: background 0.5s ease-in-out;
   cursor: pointer;
 }
+.sidebar-item> i{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .sidebar-item:hover{
   background: rgba(var(--secondary),0.1);
 }
