--- a/src/app.css
+++ b/src/app.css
@@ -91,10 +91,6 @@ main{
   padding: 1em;
   margin-left: 18vw;
   background: rgb(var(--primary));
-  background-image: url('./assets/home-bg.png');
-  background-repeat: no-repeat;
-  background-position: 120% 100%;
-  background-size: 50%;
 }
 .container h1{
   font-size: 4rem;
@@ -113,4 +109,23 @@ main{
   font-size: 1.1em;
   font-weight: 500 !important;
   color:rgb(var(--secondary)) ;
+}
+.hero-icon{
+  width: 12%;
+  position: absolute;
+  bottom:10% ;
+  right: 2%;
+  animation: float 3s infinite cubic-bezier(0.895, 0.03, 0.685, 0.22);
+}
+
+@keyframes float{
+  0%{
+    transform: translateY(5%);
+  }
+  50%{
+    transform: translateY(-10%);
+  }
+  100%{
+    transform: translateY(5%);
+  }
 }
