--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap");
-@import './hero.css';
-@import './nav.css';
-@import './sidebar.css';
+@import "./hero.css";
+@import "./about.css";
+@import "./nav.css";
+@import "./sidebar.css";
 :root {
   --primary: 3, 15, 36;
   --secondary: 230, 243, 255;
@@ -16,23 +17,56 @@
   user-select: none;
 }
 
+body{
+  background: rgba(var(--secondary),1);
+}
+
 main {
   margin-top: 15.5vh;
+  overflow-x: hidden;
 }
 main.hidden-navbar {
   margin-top: 0;
   min-height: 100vh;
 }
 
+.container > div {
+  width: 82vw;
+  margin-left: 18vw;
+}
+
+.container.collapsed-sidebar > div {
+  margin-left: 5vw;
+  width: 95vw !important;
+}
+
 /* Animation frames */
 @keyframes float {
   0% {
-    transform: translateY(5%);
+    transform: translateY(0%);
   }
   50% {
-    transform: translateY(-10%);
+    transform: translateY(-5%);
   }
   100% {
-    transform: translateY(5%);
+    transform: translateY(0%);
+  }
+}
+
+@keyframes bounce {
+  20%,
+  50%,
+  80% {
+    transform: translateY(0);
+  }
+  100%,
+  0% {
+    transform: translateY(2%);
+  }
+  40% {
+    transform: translateY(-50%);
+  }
+  60% {
+    transform: translateY(-15%);
   }
 }
