--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap");
 @import "./hero.css";
 @import "./about.css";
+@import "./features.css";
 @import "./nav.css";
 @import "./sidebar.css";
 :root {
