--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -8,7 +8,7 @@
 :root {
   --primary: 3, 15, 36;
   --secondary: 230, 243, 255;
-  --accent: 245, 135, 10;
+  --accent: 255, 97, 68;
 }
 
 * {
@@ -17,6 +17,7 @@
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
   user-select: none;
+  text-decoration: none;
 }
 
 body{
@@ -40,6 +41,31 @@ main.hidden-navbar {
 .container.collapsed-sidebar > section {
   margin-left: 5vw;
   width: 95vw !important;
+}
+
+.not-found {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+.not-found > img{
+  width: 100%;
+  height: 100%;
+}
+.not-found >a{
+  position: absolute;
+  bottom: 5%;
+  padding: 1%;
+  text-decoration: none;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  font-size: 2em;
+  text-align: center;
+  background: rgba(var(--primary),1);
+  color: rgba(var(--accent),1)
 }
 
 /* Animation frames */
